fixed planet images not showing.

--- a/planets/src/Components/Mobile Menu/MobileMenu.css
+++ b/planets/src/Components/Mobile Menu/MobileMenu.css
@@ -44,6 +44,8 @@
     text-transform: uppercase;
     margin-left: 1.5rem;
     font-size: 1.2rem;
+    color: var(--white);
+    text-decoration: none;
 }
 
 .arrow-right {
